fixed header spacing and font size

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -45,11 +45,18 @@
 
 /* ------------- Live Chat Page Chat Section --------------- */
 
+main {
+  margin-top: 50px;
+}
 #chat-header {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 30px;
+  margin-bottom: 40px;
+}
+#header-text {
+  font-size: 4vw;
 }
 #header-line {
   border-bottom: 1px solid #dddddd;
